@@ -1,3 +1,6 @@
+2006-07-23  Brian Matherly  <brian@gramps-project.org>
+	* src/plugins/NarrativeWeb.py: fix bug for no surname (bug #265)
+
 2006-07-23  Manfred Paulus  <manfred.paulus@gmx.de>
 	* src/BaseDoc.py: fix angle calculation
 	* src/docgen/PSDrawDoc.py: fix angle calculation
